--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,29 @@ body {
   color: white;
   display: grid;
   grid-template-columns: [left] 25% [middle-left] 50% [middle-right] 25% [right];
-  grid-template-rows: [top] auto [content-top] auto [content-bottom] 100pt [bottom];
+  grid-template-rows: [top] 175px [content-top] auto [content-bottom] 100pt [bottom];
+  padding: 0;
+  margin:0;
 }
 
 header {
   grid-column: left / right;
   grid-row: top / content-top;
   text-align: center;
+  margin: 0;
+  padding-bottom: 24px;
 }
 
 /* this should be for the subtitle*/
 h1 ~ p {
   text-decoration: double;
+}
+
+div + header {
+  position: fixed;
+  width: 100%;
+  height: 150px;
+  background-color: #404040;
 }
 
 footer {
@@ -25,6 +36,10 @@ footer {
 main {
   grid-column: middle-left / middle-right;
   grid-row: content-top / content-bottom;
+}
+
+[class="content"] {
+  min-width: 500px;
 }
 
 #attendance {
